Bug 150575 - REPORTBUILDER: Crash when closing report after report navigator has been started
Summary: REPORTBUILDER: Crash when closing report after report navigator has been started
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.1.5.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.5.0 target:7.4.2 target:7.3.7
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2022-08-24 06:28 UTC by Robert Großkopf
Modified: 2022-09-13 11:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Open report for editing, open report navigator while editing, close report … (54.16 KB, application/vnd.oasis.opendocument.database)
2022-08-24 06:28 UTC, Robert Großkopf
Details
bt with debug symbols (5.84 KB, text/plain)
2022-08-24 07:13 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2022-08-24 06:28:47 UTC
Created attachment 181993 [details]
Open report for editing, open report navigator while editing, close report …

Open the attached database.
Open the report "Report" for editing.
Go to "View" → "Report Navigator" (or the button for Report Navigator).
Report navigator appears.
Now close the dialog "Report Navigator".
Close the report.
LO will crash immediately.

This bug appears in
Version: 7.3.5.2 / LibreOffice Community
Build ID: 184fe81b8c8c30d8b5082578aee2fed2ea847c01
CPU threads: 6; OS: Linux 5.3; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded

(also LO 7.4.0.3, also 7.1.5.2 … might be very old bug)

Might be it is a special bug with VCL: kf5.
Comment 1 Julien Nabet 2022-08-24 07:13:40 UTC
Created attachment 181994 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Julien Nabet 2022-08-24 15:38:44 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/138773
Comment 3 Commit Notification 2022-08-24 17:01:23 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9931d6b1fb0406e16d56e186812884511738dcfa

tdf#150575: REPORTBUILDER: Crash when closing report when used report navigator

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2022-08-24 17:03:39 UTC
Patch waiting for review for 7.4 here:
https://gerrit.libreoffice.org/c/core/+/138551

Let's put this one to FIXED.

Robert: don't hesitate to reopen this tracker if you still reproduce this with a daily build which includes the patch.
Comment 5 Commit Notification 2022-08-26 15:19:17 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/41d1e848677891d1451b2120763c7c069006b4a5

tdf#150575: REPORTBUILDER: Crash when closing report when used report navigator

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-09-13 11:40:26 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/a152b1fe7fc3056ff6444321a1cdf8c24b8c8a2f

tdf#150575: REPORTBUILDER: Crash when closing report when used report navigator

It will be available in 7.3.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.