include/comphelper/SelectionMultiplex.hxx
@@ -80,6 +80,8 @@ namespace comphelper
         void        unlock();
         /// get the lock count
         sal_Int32   locked() const { return m_nLockCount; }
+
+        void dispose();
     };
 
 
