reportdesign/source/ui/dlg/Navigator.cxx
@@ -239,6 +239,7 @@ NavigatorTree::~NavigatorTree()
         delete pData;
         return false;
     });
+    m_pSelectionListener->dispose();
     m_pReportListener->dispose();
 }
 
